<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/question_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/answer_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/answer_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view"
        app:layout_constraintBottom_toTopOf="@+id/function_buttons"
        android:layout_marginBottom="80dp"
        >

        <Button
            android:id="@+id/answer_0_button"
            style="?android:buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_0_button" />

        <Button
            android:id="@+id/answer_1_button"
            style="?android:buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_button" />

        <Button
            android:id="@+id/answer_2_button"
            style="?android:buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_button" />

        <Button
            android:id="@+id/answer_3_button"
            style="?android:buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3_button" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/function_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"

        android:padding="10dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/hint_button"
            style="?android:buttonStyle"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_weight="1"

            android:background="@drawable/roundedbutton"
            android:text="@string/hint_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/submit_button"
            style="?android:buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:text="@string/submit_button" />
    </FrameLayout>


<!--    <LinearLayout-->

<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent">-->

<!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>