<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="-2"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/results_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/result_header"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/results_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <LinearLayout
        android:id="@+id/results_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/function_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_header">

    <LinearLayout
        android:id="@+id/text_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/questions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total questions: "
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_questions_value"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:text="@string/total_questions_value"
            android:layout_gravity="right"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/text_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/answers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total correct: "
            android:textColor="@color/black"
            android:textSize="20sp" />
            <TextView
                android:id="@+id/total_answers_correct_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/total_answers_correct_value"
                android:textColor="@color/black"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hint used: "
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/total_hints_used_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_hints_used_value"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="right" />

    </LinearLayout>

    </LinearLayout>

    <Button
    android:id="@+id/reset_button"
    style="?android:buttonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="112dp"
    android:text="@string/reset_button"
    android:textColor="@color/white"
    app:layout_constraintBottom_toTopOf="@+id/function_buttons"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_list" />


</androidx.constraintlayout.widget.ConstraintLayout>